force-app/main/default/objects/Event__c/fields/EventOrganizer__c.field-meta.xml
<CustomField>
    <fullName>EventOrganizer__c</fullName>
    <label>Event Organizer</label>
    <referenceTo>EventOrganizer__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>