force-app/main/default/objects/Event__c/fields/LocationVerified__c.field-meta.xml
<CustomField>
    <fullName>LocationVerified__c</fullName>
    <formula>Location__r.Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Verified</label>
    <type>Checkbox</type>
</CustomField>