force-app/main/default/objects/Event__c/fields/MaxSeats__c.field-meta.xml
<CustomField>
    <fullName>MaxSeats__c</fullName>
    <label>Max Seats</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>