force-app/main/default/objects/Event__c/fields/RemainingSeats__c.field-meta.xml
<CustomField>
    <fullName>RemainingSeats__c</fullName>
    <formula>MaxSeats__c  -  PeopleAttending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>