force-app/main/default/objects/Event__c/validationRules/CheckEndDateOneDayAhead.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEndDateOneDayAhead</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(EndDateTime__c))
&amp;&amp;
StartDateTime__c + 1&gt; EndDateTime__c</errorConditionFormula>
    <errorDisplayField>EndDateTime__c</errorDisplayField>
    <errorMessage>EndDateTime must be greater than StartDateTime</errorMessage>
</ValidationRule>