force-app/main/default/objects/Event__c/validationRules/CheckInPersonLocation.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckInPersonLocation</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(EventType__c) = &apos;In-Person&apos;
&amp;&amp;
ISBLANK(Location__c)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>You should specify a Location for In-Person events.</errorMessage>
</ValidationRule>