force-app/main/default/objects/Event__c/validationRules/CheckRecurringAndFrequency.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckRecurringAndFrequency</fullName>
    <active>true</active>
    <errorConditionFormula>(Recurring__c = true &amp;&amp; ISBLANK( TEXT(Frequency__c) ))
||
(Recurring__c = false &amp;&amp; NOT(ISBLANK(TEXT(Frequency__c))))</errorConditionFormula>
    <errorDisplayField>Recurring__c</errorDisplayField>
    <errorMessage>Please check your frequency settings.</errorMessage>
</ValidationRule>