force-app/main/default/objects/Event__c/validationRules/CheckVirtualLocation.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckVirtualLocation</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(EventType__c) = &apos;Virtual&apos;
&amp;&amp;
NOT(ISBLANK(Location__c))</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>You can not select a Location for Virtual Events.</errorMessage>
</ValidationRule>