force-app/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StartDateTime__c</columns>
    <columns>EndDateTime__c</columns>
    <columns>Live__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>